syntax = "proto3";

option go_package = "storage";
option cc_enable_arenas = true;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

import "storage/network_flow.proto";
import "storage/process_indicator.proto";

package storage;

message ProcessListeningOnPort {
    message Endpoint {
        uint32 port = 1;
        L4Protocol protocol = 2;
    }
    repeated Endpoint endpoints = 1;
    string deployment_id = 2;
    string container_name = 3;
    string pod_id = 4;
    string pod_uid = 5;
    ProcessSignal signal = 6;
    string cluster_id = 7;
    string namespace = 8;

    google.protobuf.Timestamp container_start_time = 9;

    string image_id                                = 10;
}

message ProcessListeningOnPortFromSensor {
    uint32 port = 1;
    L4Protocol protocol = 2;
    ProcessIndicatorUniqueKey process = 3;
    google.protobuf.Timestamp close_timestamp = 4;
    string cluster_id = 6;
}

message ProcessListeningOnPortStorage {
    // Ideally it has to be GENERATED ALWAYS AS IDENTITY, which will make it a
    // bigint with a sequence. Unfortunately at the moment some bits of store
    // generator assume an id has to be a string.
    string id = 1 [(gogoproto.moretags) = 'sql:"pk,type(uuid)"'];

    uint32 port = 2;
    L4Protocol protocol = 3;
    google.protobuf.Timestamp close_timestamp = 4;

    string process_indicator_id = 5
        [(gogoproto.moretags) = 'search:"Process ID,store" sql:"fk(ProcessIndicator:id),no-fk-constraint,index=btree,type(uuid)"'];
}
